force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/Apttus_Base2__BasePrivateProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define base properties</description>
    <label>Base Private Properties</label>
</CustomObject>