force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__EnableSandboxUsageData__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__EnableSandboxUsageData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether to gather usage analytics from non-production environments.</description>
    <inlineHelpText>Determines whether to gather usage analytics from non-production environments.</inlineHelpText>
    <label>Enable Sandbox Usage Data</label>
    <type>Checkbox</type>
</CustomField>