force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__EnableUsageData__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__EnableUsageData__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Usage Data</description>
    <inlineHelpText>Enable Usage Data</inlineHelpText>
    <label>Enable Usage Data</label>
    <type>Checkbox</type>
</CustomField>