force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__UsageDataEndpoint__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__UsageDataEndpoint__c</fullName>
    <defaultValue>&quot;https://data.analytics.apttus.com/api/v1/metadata/account/custom/value?create=true&quot;</defaultValue>
    <description>Usage data endpoint</description>
    <inlineHelpText>Usage data endpoint</inlineHelpText>
    <label>Usage Data Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>