force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__UsageDataKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__UsageDataKey__c</fullName>
    <defaultValue>&quot;00a56a1e-8089-4437-7efb-a99f59189b93&quot;</defaultValue>
    <description>Usage data key</description>
    <inlineHelpText>Usage data key</inlineHelpText>
    <label>Usage Data Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>