force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__UsageDataProviderClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__UsageDataProviderClass__c</fullName>
    <defaultValue>&quot;Apttus_Config2.UsageDataImplementation&quot;</defaultValue>
    <description>List of Usage Data provider class names, separated by comma. The class should implement the Apttus_Base2.IUsageData interface.</description>
    <inlineHelpText>List of Usage Data provider class names, separated by comma. The class should implement the Apttus_Base2.IUsageData interface.</inlineHelpText>
    <label>Usage Data Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>