force-app/main/default/objects/Apttus_Base2__BasePrivateProperties__c/fields/Apttus_Base2__UsageEventKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__UsageEventKey__c</fullName>
    <defaultValue>&quot;dd56818f-5d18-41d9-6191-82958113d295&quot;</defaultValue>
    <description>Usage integration key</description>
    <inlineHelpText>Usage integration key</inlineHelpText>
    <label>Usage Event Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>